# eve-where-to-sell-blue

./: README.md
.github/workflows/: gh-page.yaml
data/: eve_map_with_blueloot.json  search_map.json
eve/src/: lib.rs
gendata/: go.mod  main.go
gendata/data/: blueloot.json  mapSolarSystemJumps.csv  mapSolarSystems.csv
route/: Cargo.toml  build.rs
route/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx  util.ts
ui/src/components/: SearchBar.tsx  SearchResults.tsx  SelectedResult.tsx  WaypointShow.tsx
