[package]
name = "eve-where-to-sell-blue"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pathfinding = "4.3.0"
phf = "0.11.2"
wasm-bindgen = "0.2.87"
eve = { path = "../eve" }

[build-dependencies]
phf_codegen = "0.11.2"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
eve = { path = "../eve" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"